--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,5 @@ add_subdirectory(vec3d)
 add_subdirectory(vec3dT)
 add_subdirectory(point2d)
 add_subdirectory(array)
+add_subdirectory(stackl)
+add_subdirectory(priorityqueuel)
