--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,5 @@ add_subdirectory(point2d)
 add_subdirectory(array)
 add_subdirectory(stackl)
 add_subdirectory(priorityqueuel)
+add_subdirectory(queuearray)
+add_subdirectory(stackarray)
