--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,5 @@ add_subdirectory(stackl)
 add_subdirectory(priorityqueuel)
 add_subdirectory(queuearray)
 add_subdirectory(stackarray)
+add_subdirectory(matrixu)
+add_subdirectory(matrixr)
